--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<script type="text/javascript">
 			// advice_url = "http://localhost:8080/api";
-			advice_url = 'http://sf-pyw.mosyag.in/m04/api/forecasts';
+			advice_url = 'https://sf-pyw.mosyag.in/m04/api/forecasts';
 			$('#main-header').click(function(){
 			
 				$.getJSON(advice_url, function(data) {
